# vais-app

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  SPEC.md  pyproject.toml
.devcontainer/: .bashrc  .gitconfig  .tmux.conf  Dockerfile  Makefile  devcontainer.json  sync.sh
.serena/: project.yml
config/: prompts.yaml
src/: main.py
src/routers/: chat.py
src/services/: search.py
static/: style.css
templates/: index.html
templates/partials/: message.html
tests/: test_chat.py
